client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/training-plan: "true"
        io.kompose.service: client
    spec:
      containers:
        - image: ahaf82/client
          name: client
          ports:
            - containerPort: 3000
          resources: {}
          stdin: true
      restartPolicy: Always
      subdomain: z-camp
status: {}
