server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.25.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/training-plan: "true"
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: EMAIL_FROM
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_FROM
                  name: env
            - name: EMAIL_HOST
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_HOST
                  name: env
            - name: EMAIL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_PASSWORD
                  name: env
            - name: EMAIL_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_USERNAME
                  name: env
            - name: FACEBOOK_CLIENT_ID
              valueFrom:
                configMapKeyRef:
                  key: FACEBOOK_CLIENT_ID
                  name: env
            - name: FACEBOOK_CLIENT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: FACEBOOK_CLIENT_SECRET
                  name: env
            - name: GOOGLE_CLIENT_ID
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_CLIENT_ID
                  name: env
            - name: GOOGLE_CLIENT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: GOOGLE_CLIENT_SECRET
                  name: env
            - name: MONGO_DB
              valueFrom:
                configMapKeyRef:
                  key: MONGO_DB
                  name: env
            - name: MONGO_HOSTNAME
              value: cluster0.wucbb.mongodb.net
            - name: MONGO_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MONGO_PASSWORD
                  name: env
            - name: MONGO_PORT
              valueFrom:
                configMapKeyRef:
                  key: MONGO_PORT
                  name: env
            - name: MONGO_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: MONGO_USERNAME
                  name: env
            - name: REACT_APP_VAPID_PUBLIC_KEY
              valueFrom:
                configMapKeyRef:
                  key: REACT_APP_VAPID_PUBLIC_KEY
                  name: env
            - name: VAPID_PRIVATE_KEY
              valueFrom:
                configMapKeyRef:
                  key: VAPID_PRIVATE_KEY
                  name: env
            - name: VAPID_PUBLIC_KEY
              valueFrom:
                configMapKeyRef:
                  key: VAPID_PUBLIC_KEY
                  name: env
          image: ahaf82/server
          name: server
          ports:
            - containerPort: 5050
          resources: {}
      restartPolicy: Always
      subdomain: z-camp
status: {}
