training-plan-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: training-plan
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/training-plan: "true"
  podSelector:
    matchLabels:
      io.kompose.network/training-plan: "true"
